Added more information on the screen time limit mobilizing notifications on the ScreenTimeLimitSetupScreen

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -211,6 +211,26 @@
     <string name="setting_not_saved">Nie zapisano ustawień</string>
     <string name="setting_not_saved_description">Zmienione ustawienia nie zostały zapisane. Kliknij przycisk \"Potwierdź\", aby zapisać zmiany.</string>
     <string name="exit">Wyjdź</string>
+
+    <string name="set_up_screen_time_limit">Ustaw swój limit czasu przed ekranem</string>
+    <string name="screen_time_limit">Limit czasu przed ekranem</string>
+    <string name="set_up_screen_time_limit_description">Możesz ustawić dzienny limit czasu przed ekranem lub go wyłączyć:</string>
+    <string name="new_screen_time_limit_set_for_tomorrow">Nowy limit czasu przed ekranem jest już ustawiony na jutro:</string>
+    <string name="screen_time_limit_purposes">Limit czasu przed ekranem służy tym celom:</string>
+    <string name="complementation_description">Limit czasu przed ekranem wraz z limitem odblokowań pozwala jeszcze dokładniej kontrolować nawyki użytkowania.</string>
+    <string name="complementation">Uzupełnienie</string>
+    <string name="adjustability_description_screen_time_limit">Limit czasu przed ekranem może być dostosowany do twoich poprawiających się standardów użytkowania smartfona.</string>
+    <string name="remove_tomorrow_screen_time_limit">Usunąć jutrzejszy nowy limit czasu przed ekranem?</string>
+    <string name="remove_tomorrow_screen_time_limit_description">Czy na pewno chcesz anulować nowy limit czasu przed ekranem, który wszedłby w życie jutro?</string>
+    <string name="enable_screen_time_limit">Włącz limit czasu przed ekranem</string>
+    <string name="enable_screen_time_limit_description">Wyłączenie limitu spowoduje wyłączenie limitu czasu przed ekranem z powiadomień mobilizujących i codziennych podsumowań.</string>
+    <string name="todays_screen_time_limit">Dzisiejszy limit czasu przed ekranem:</string>
+    <string name="screen_time_limit_reached">Limit czasu przed ekranem osiągnięty!</string>
+    <string name="screen_time_limit_reached_description">Osiągnąłeś dzienny limit czasu przed ekranem - pilnuj swojego czasu!</string>
+    <string name="screen_time_limit_near">Zbliżasz się do limitu czasu przed ekranem!</string>
+    <string name="screen_time_limit_near_description">Do osiągnięcia limitu czasu przed ekranem pozostało 15 minut.</string>
+    <string name="screen_time_limit_warnings">Ostrzeżenia o limicie czasu przed ekranem</string>
+    <string name="screen_time_limit_warnings_description">UnlockMaster poinformuje Cię, kiedy zbliżasz się do limitu czasu przed ekranem i kiedy go osiągniesz, za pomocą powiadomień takich jak to:</string>
     <string name="content_description_application_icon">Ikona aplikacji UnlockMaster</string>
     <string name="content_description_back_icon">Ikona strzałki wstecz</string>
     <string name="content_description_guidance_icon">Ikona brzęczącego dzwonka</string>
@@ -223,7 +243,7 @@
     <string name="content_description_disabled_notifications_icon">Ikona wyłączonego dzwonka powiadomień</string>
     <string name="content_description_next_icon">Ikona strzałki wskazująca dalszą nawigację</string>
     <string name="content_description_service_notification_image">Obraz powiadomienia wskazującego działający serwis w tle</string>
-    <string name="content_description_mobilizing_notification_image">Obraz powiadomienia mobilizującego</string>
+    <string name="content_description_unlock_limit_mobilizing_notification_image">Obraz powiadomienia mobilizującego</string>
     <string name="content_description_daily_wrapup_notification_image">Obraz powiadomienia przypominającego o codziennym podsumowaniu</string>
     <string name="content_description_menu_icon">Ikona menu</string>
     <string name="content_description_play_icon">Ikona odtwarzania</string>
@@ -252,22 +272,6 @@
     <string name="content_description_suggested_settings_icon">Ikona sugerowanego ustawienia</string>
     <string name="content_description_download_icon">Ikona pobierania</string>
     <string name="content_description_upload_icon">Ikona przesyłania</string>
-    <string name="set_up_screen_time_limit">Ustaw swój limit czasu przed ekranem</string>
-    <string name="screen_time_limit">Limit czasu przed ekranem</string>
-    <string name="set_up_screen_time_limit_description">Możesz ustawić dzienny limit czasu przed ekranem lub go wyłączyć:</string>
-    <string name="new_screen_time_limit_set_for_tomorrow">Nowy limit czasu przed ekranem jest już ustawiony na jutro:</string>
-    <string name="screen_time_limit_purposes">Limit czasu przed ekranem służy tym celom:</string>
-    <string name="complementation_description">Limit czasu przed ekranem wraz z limitem odblokowań pozwala jeszcze dokładniej kontrolować nawyki użytkowania.</string>
-    <string name="complementation">Uzupełnienie</string>
     <string name="content_description_complementing_layers_icon">Ikona uzupełniających się warstw</string>
-    <string name="adjustability_description_screen_time_limit">Limit czasu przed ekranem może być dostosowany do twoich poprawiających się standardów użytkowania smartfona.</string>
-    <string name="remove_tomorrow_screen_time_limit">Usunąć jutrzejszy nowy limit czasu przed ekranem?</string>
-    <string name="remove_tomorrow_screen_time_limit_description">Czy na pewno chcesz anulować nowy limit czasu przed ekranem, który wszedłby w życie jutro?</string>
-    <string name="enable_screen_time_limit">Włącz limit czasu przed ekranem</string>
-    <string name="enable_screen_time_limit_description">Wyłączenie limitu spowoduje wyłączenie limitu czasu przed ekranem z powiadomień mobilizujących i codziennych podsumowań.</string>
-    <string name="todays_screen_time_limit">Dzisiejszy limit czasu przed ekranem:</string>
-    <string name="screen_time_limit_reached">Limit czasu przed ekranem osiągnięty!</string>
-    <string name="screen_time_limit_reached_description">Osiągnąłeś dzienny limit czasu przed ekranem - pilnuj swojego czasu!</string>
-    <string name="screen_time_limit_near">Zbliżasz się do limitu czasu przed ekranem!</string>
-    <string name="screen_time_limit_near_description">Do osiągnięcia limitu czasu przed ekranem pozostało 15 minut.</string>
+    <string name="content_description_screen_time_limit_mobilizing_notification_image">Obraz mobilizującego powiadomienia o limicie czasu przed ekranem</string>
 </resources>
