--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -201,6 +201,25 @@
     <string name="setting_not_saved">Ayarlar kaydedilmedi</string>
     <string name="setting_not_saved_description">Değiştirdiğiniz ayarlar kaydedilmedi. Değişiklikleri kaydetmek için \"Onayla\" düğmesine tıklayın.</string>
     <string name="exit">Çıkış</string>
+    <string name="set_up_screen_time_limit">Ekran süresi sınırınızı belirleyin</string>
+    <string name="screen_time_limit">Ekran süresi sınırı</string>
+    <string name="set_up_screen_time_limit_description">Günlük ekran süresi sınırınızı ayarlayabilir veya devre dışı bırakabilirsiniz:</string>
+    <string name="new_screen_time_limit_set_for_tomorrow">Yarın için yeni ekran süresi sınırı belirlendi:</string>
+    <string name="screen_time_limit_purposes">Ekran süresi sınırlaması bu amaçlara hizmet eder:</string>
+    <string name="complementation_description">Kilit açma sınırı ile birlikte ekran süresi sınırı, kullanım alışkanlıklarını daha da hassas bir şekilde kontrol etmenizi sağlar.</string>
+    <string name="complementation">Tamamlama</string>
+    <string name="adjustability_description_screen_time_limit">Ekran süresi sınırı, gelişen akıllı telefon kullanım standartlarınızı karşılayacak şekilde ayarlanabilir.</string>
+    <string name="remove_tomorrow_screen_time_limit">Yarınki yeni ekran süresi sınırını kaldıralım mı?</string>
+    <string name="remove_tomorrow_screen_time_limit_description">Yarın yürürlüğe girecek olan yeni ekran süresi sınırını iptal etmek istediğinizden emin misiniz?</string>
+    <string name="enable_screen_time_limit">Ekran süresi sınırını etkinleştirin</string>
+    <string name="enable_screen_time_limit_description">Sınırı devre dışı bırakırsanız, ekran süresi sınırı bildirimleri ve günlük özetleri mobilize etmekten hariç tutulacaktır.</string>
+    <string name="todays_screen_time_limit">Bugünün ekran süresi sınırı:</string>
+    <string name="screen_time_limit_reached">Ekran süresi sınırına ulaşıldı!</string>
+    <string name="screen_time_limit_reached_description">Günlük ekran süresi sınırınıza ulaştınız - zamanınıza dikkat edin!</string>
+    <string name="screen_time_limit_near">Ekran süresi sınırına yaklaşıyorsun!</string>
+    <string name="screen_time_limit_near_description">Ekran süresi sınırınıza ulaşmanıza 15 dakika kaldı.</string>
+    <string name="screen_time_limit_warnings">Ekran süresi sınırı uyarıları</string>
+    <string name="screen_time_limit_warnings_description">UnlockMaster, ekran süresi sınırınıza yaklaştığınızda ve ulaştığınızda bu gibi bildirimlerle sizi bilgilendirecektir:</string>
 
     <string name="content_description_application_icon">UnlockMaster uygulama simgesi</string>
     <string name="content_description_back_icon">Geri ok simgesi</string>
@@ -214,7 +233,7 @@
     <string name="content_description_disabled_notifications_icon">Devre dışı bildirim zili simgesi</string>
     <string name="content_description_next_icon">Daha fazla gezinme simgesini gösteren ok</string>
     <string name="content_description_service_notification_image">Çalışan arka plan hizmet görüntüsünü gösteren bildirim</string>
-    <string name="content_description_mobilizing_notification_image">Bildirim görüntüsünü mobilize etme</string>
+    <string name="content_description_unlock_limit_mobilizing_notification_image">Bildirim görüntüsünü mobilize etme</string>
     <string name="content_description_daily_wrapup_notification_image">Günlük özet görüntüsünü hatırlatan bildirim</string>
     <string name="content_description_menu_icon">Menü simgesi</string>
     <string name="content_description_play_icon">Oynat simgesi</string>
@@ -243,22 +262,6 @@
     <string name="content_description_suggested_settings_icon">Önerilen ayar simgesi</string>
     <string name="content_description_download_icon">Simgeyi indir</string>
     <string name="content_description_upload_icon">Simge yükle</string>
-    <string name="set_up_screen_time_limit">Ekran süresi sınırınızı belirleyin</string>
-    <string name="screen_time_limit">Ekran süresi sınırı</string>
-    <string name="set_up_screen_time_limit_description">Günlük ekran süresi sınırınızı ayarlayabilir veya devre dışı bırakabilirsiniz:</string>
-    <string name="new_screen_time_limit_set_for_tomorrow">Yarın için yeni ekran süresi sınırı belirlendi:</string>
-    <string name="screen_time_limit_purposes">Ekran süresi sınırlaması bu amaçlara hizmet eder:</string>
-    <string name="complementation_description">Kilit açma sınırı ile birlikte ekran süresi sınırı, kullanım alışkanlıklarını daha da hassas bir şekilde kontrol etmenizi sağlar.</string>
-    <string name="complementation">Tamamlama</string>
     <string name="content_description_complementing_layers_icon">Tamamlayıcı katmanlar simgesi</string>
-    <string name="adjustability_description_screen_time_limit">Ekran süresi sınırı, gelişen akıllı telefon kullanım standartlarınızı karşılayacak şekilde ayarlanabilir.</string>
-    <string name="remove_tomorrow_screen_time_limit">Yarınki yeni ekran süresi sınırını kaldıralım mı?</string>
-    <string name="remove_tomorrow_screen_time_limit_description">Yarın yürürlüğe girecek olan yeni ekran süresi sınırını iptal etmek istediğinizden emin misiniz?</string>
-    <string name="enable_screen_time_limit">Ekran süresi sınırını etkinleştirin</string>
-    <string name="enable_screen_time_limit_description">Sınırı devre dışı bırakırsanız, ekran süresi sınırı bildirimleri ve günlük özetleri mobilize etmekten hariç tutulacaktır.</string>
-    <string name="todays_screen_time_limit">Bugünün ekran süresi sınırı:</string>
-    <string name="screen_time_limit_reached">Ekran süresi sınırına ulaşıldı!</string>
-    <string name="screen_time_limit_reached_description">Günlük ekran süresi sınırınıza ulaştınız - zamanınıza dikkat edin!</string>
-    <string name="screen_time_limit_near">Ekran süresi sınırına yaklaşıyorsun!</string>
-    <string name="screen_time_limit_near_description">Ekran süresi sınırınıza ulaşmanıza 15 dakika kaldı.</string>
+    <string name="content_description_screen_time_limit_mobilizing_notification_image">Ekran önünde zaman sınırı bildirimini harekete geçirme görüntüsü</string>
 </resources>
