--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -204,6 +204,25 @@
     <string name="setting_not_saved">Settings not saved</string>
     <string name="setting_not_saved_description">The settings you have changed have not been saved. Click the \"Confirm\" button to save the changes.</string>
     <string name="exit">Exit</string>
+    <string name="set_up_screen_time_limit">Set up your screen time limit</string>
+    <string name="screen_time_limit">Screen time limit</string>
+    <string name="set_up_screen_time_limit_description">You can set your daily screen time limit or disable it:</string>
+    <string name="new_screen_time_limit_set_for_tomorrow">New screen time limit is already set for tomorrow:</string>
+    <string name="screen_time_limit_purposes">Screen time limit serves these purposes:</string>
+    <string name="complementation_description">Screen time limit along with unlock limit lets you control usage habits even more precise.</string>
+    <string name="complementation">Complementation</string>
+    <string name="adjustability_description_screen_time_limit">Screen time limit can be adjusted to meet your improving smartphone usage standards.</string>
+    <string name="remove_tomorrow_screen_time_limit">Remove tomorrow’s new screen time limit?</string>
+    <string name="remove_tomorrow_screen_time_limit_description">Are you sure you want to cancel the new screen time limit that would take effect tomorrow?</string>
+    <string name="enable_screen_time_limit">Enable screen time limit</string>
+    <string name="enable_screen_time_limit_description">If you disable the limit it will exclude screen time limit from mobilizing notifications and daily wrap-ups.</string>
+    <string name="todays_screen_time_limit">Today’s screen time limit:</string>
+    <string name="screen_time_limit_reached">Screen time limit reached!</string>
+    <string name="screen_time_limit_reached_description">You’ve reached your daily screen time limit - watch your time!</string>
+    <string name="screen_time_limit_near">You’re nearing your screen time limit!</string>
+    <string name="screen_time_limit_near_description">There are 15 minutes left until you reach your screen time limit.</string>
+    <string name="screen_time_limit_warnings">Screen time limit warnings</string>
+    <string name="screen_time_limit_warnings_description">UnlockMaster will let you know when you are nearing your screen time limit and when you reach it with notifications like this:</string>
 
     <string name="content_description_application_icon">UnlockMaster application icon</string>
     <string name="content_description_back_icon">Back arrow icon</string>
@@ -217,7 +236,7 @@
     <string name="content_description_disabled_notifications_icon">Disabled notification bell icon</string>
     <string name="content_description_next_icon">Arrow indicating further navigation icon</string>
     <string name="content_description_service_notification_image">Notification indicating working background service image</string>
-    <string name="content_description_mobilizing_notification_image">Mobilizing notification image</string>
+    <string name="content_description_unlock_limit_mobilizing_notification_image">Mobilizing notification image</string>
     <string name="content_description_daily_wrapup_notification_image">Notification reminding about daily wrap-up image</string>
     <string name="content_description_menu_icon">Menu icon</string>
     <string name="content_description_play_icon">Play icon</string>
@@ -246,22 +265,6 @@
     <string name="content_description_suggested_settings_icon">Suggested setting icon</string>
     <string name="content_description_download_icon">Download icon</string>
     <string name="content_description_upload_icon">Upload icon</string>
-    <string name="set_up_screen_time_limit">Set up your screen time limit</string>
-    <string name="screen_time_limit">Screen time limit</string>
-    <string name="set_up_screen_time_limit_description">You can set your daily screen time limit or disable it:</string>
-    <string name="new_screen_time_limit_set_for_tomorrow">New screen time limit is already set for tomorrow:</string>
-    <string name="screen_time_limit_purposes">Screen time limit serves these purposes:</string>
-    <string name="complementation_description">Screen time limit along with unlock limit lets you control usage habits even more precise.</string>
-    <string name="complementation">Complementation</string>
     <string name="content_description_complementing_layers_icon">Complementing layers icon</string>
-    <string name="adjustability_description_screen_time_limit">Screen time limit can be adjusted to meet your improving smartphone usage standards.</string>
-    <string name="remove_tomorrow_screen_time_limit">Remove tomorrow’s new screen time limit?</string>
-    <string name="remove_tomorrow_screen_time_limit_description">Are you sure you want to cancel the new screen time limit that would take effect tomorrow?</string>
-    <string name="enable_screen_time_limit">Enable screen time limit</string>
-    <string name="enable_screen_time_limit_description">If you disable the limit it will exclude screen time limit from mobilizing notifications and daily wrap-ups.</string>
-    <string name="todays_screen_time_limit">Today’s screen time limit:</string>
-    <string name="screen_time_limit_reached">Screen time limit reached!</string>
-    <string name="screen_time_limit_reached_description">You’ve reached your daily screen time limit - watch your time!</string>
-    <string name="screen_time_limit_near">You’re nearing your screen time limit!</string>
-    <string name="screen_time_limit_near_description">There are 15 minutes left until you reach your screen time limit.</string>
+    <string name="content_description_screen_time_limit_mobilizing_notification_image">Screen time limit mobilizing notification image</string>
 </resources>
