--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -264,4 +264,5 @@
     <string name="content_description_upload_icon">Simge yükle</string>
     <string name="content_description_complementing_layers_icon">Tamamlayıcı katmanlar simgesi</string>
     <string name="content_description_screen_time_limit_mobilizing_notification_image">Ekran önünde zaman sınırı bildirimini harekete geçirme görüntüsü</string>
+    <string name="content_description_alarm_icon">Çalar saat simgesi</string>
 </resources>
