--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,9 +143,9 @@
     <string name="as_much_as_yesterday">as much as yesterday.</string>
     <string name="as_much_as_a_week_before">as much as a week before.</string>
     <string name="of_screen_today">of screen time today.</string>
-    <string name="keep_improving_for_limit_recommendation">Keep improving to get unlock limit update recommendations!</string>
-    <string name="limit_exceeded_significantly">Unlock limit exceeded significantly!</string>
-    <string name="consider_increasing_limit_or_pausing">Consider increasing your unlock limit if you are using your phone more extensively or using the pause feature when you know you are going to be unlocking the phone deliberately more often (e.g. using calculator or gym log app).</string>
+    <string name="keep_improving_for_unlock_limit_recommendation">Keep improving to get unlock limit update recommendations!</string>
+    <string name="unlock_limit_exceeded_significantly">Unlock limit exceeded significantly!</string>
+    <string name="consider_increasing_unlock_limit_or_pausing">Consider increasing your unlock limit if you are using your phone more extensively or using the pause feature when you know you are going to be unlocking the phone deliberately more often (e.g. using calculator or gym log app).</string>
     <string name="many_more_screen_ons_than_unlocks">Many more screen-ons than unlocks!</string>
     <string name="consider_limiting_auto_turn_on">Consider limiting automatic screen turn-on after receiving notifications or put the phone further away to prevent checking the phone unnecessarily too much.</string>
     <string name="daily_wrap_up_notifications_can_only_be_delivered_between">Daily wrap-up notifications can only be delivered between 20:00 and 23:59 (8:00 PM and 11:59 PM).</string>
@@ -222,6 +222,16 @@
     <string name="screen_time_limit_near_description">There are 15 minutes left until you reach your screen time limit.</string>
     <string name="screen_time_limit_warnings">Screen time limit warnings</string>
     <string name="screen_time_limit_warnings_description">UnlockMaster will let you know when you are nearing your screen time limit and when you reach it with notifications like this:</string>
+    <string name="disable_screen_time_limit">Disable screen time limit</string>
+    <string name="disable_screen_time_limit_description">If you disable screen time limit it will be excluded from your statistics, mobilizing notifications and daily wrap-ups.</string>
+    <string name="disable">Disable</string>
+    <string name="was_your_screen_time_limit">was your screen time limit.</string>
+    <string name="apply_suggested_screen_time_limit">Apply the suggested screen time limit now:</string>
+    <string name="screen_time_limit_exceeded_significantly">Screen time limit exceeded significantly!</string>
+    <string name="consider_increasing_screen_time_limit_or_pausing">Consider increasing your screen time limit if you are using your phone more extensively or using the pause feature when you know that the screen is going to be switched on deliberately longer (e.g. using calculator or gym log app).</string>
+    <string name="keep_improving_for_screen_time_limit_recommendation">Keep improving to get screen time limit update recommendations!</string>
+    <string name="you_have_reached_the_lowest_screen_time_limit">You have reached the lowest screen time limit available. Good job!</string>
+    <string name="as_your_new_screen_time_limit">as your new screen time limit.</string>
 
     <string name="content_description_application_icon">UnlockMaster application icon</string>
     <string name="content_description_back_icon">Back arrow icon</string>
@@ -267,7 +277,4 @@
     <string name="content_description_complementing_layers_icon">Complementing layers icon</string>
     <string name="content_description_screen_time_limit_mobilizing_notification_image">Screen time limit mobilizing notification image</string>
     <string name="content_description_alarm_icon">Alarm clock icon</string>
-    <string name="disable_screen_time_limit">Disable screen time limit</string>
-    <string name="disable_screen_time_limit_description">If you disable screen time limit it will be excluded from your statistics, mobilizing notifications and daily wrap-ups.</string>
-    <string name="disable">Disable</string>
 </resources>
